# routes/roles.routes.js
@@ -1,0 +1,8 @@
+const router = require('express').Router();
+const roles = require('../controllers/roles.controller');
+const Authorize = require('../middlewares/auth.middleware');
+
+// GET: api/roles
+router.get('/', Authorize('Usuario,Administrador'), roles.getAll);
+
+module.exports = router;
